ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_draft.snap
---
source: ash-code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, terminal.width, terminal.height))"
---
  .                                                                                                                    [— / —] [Dashboard]  
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
  ⏸ ask permissions on                                                                                                                      
  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ > 检 查 项 目 结 构                                                                                                                        │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                                                                            
  Enter send  ·  / commands
